--- a/app/src/main/res/layout/activity_list_nos_audit.xml
+++ b/app/src/main/res/layout/activity_list_nos_audit.xml
@@ -16,6 +16,85 @@
     </RelativeLayout>
 
 
+    <RelativeLayout
+        android:id="@+id/score"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/topbar"
+        android:layout_marginLeft="@dimen/dp40"
+        android:layout_marginRight="@dimen/dp40"
+        >
+
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="wrap_content"
+            android:layout_height="400dp"
+            android:background="@drawable/gold"></ImageView>
+
+        <RelativeLayout
+            android:layout_marginTop="@dimen/dp20"
+            android:layout_below="@+id/img"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp150"
+            android:background="@color/green">
+
+            <TextView
+                android:id="@+id/txt1"
+                android:paddingLeft="@dimen/dp24"
+                android:paddingRight="@dimen/dp24"
+                android:paddingTop="@dimen/dp10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ingin Mendownload hasil audit NOS?"
+                android:textSize="@dimen/dp20"
+                android:justificationMode="inter_word"
+                android:textColor="@color/white"
+                >
+            </TextView>
+
+            <LinearLayout
+                android:layout_below="@+id/txt1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                >
+
+                <Button
+
+                    android:id="@+id/download"
+                    android:layout_marginVertical="@dimen/dp10"
+                    android:layout_marginHorizontal="@dimen/dp24"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/white"
+                    android:background="@color/pdlg_color_green"
+                    android:text="Download"
+                    android:layout_height="wrap_content"
+                    >
+                </Button>
+
+                <Button
+                    android:id="@+id/exit"
+                    android:layout_marginVertical="@dimen/dp10"
+                    android:layout_marginHorizontal="@dimen/dp24"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/white"
+                    android:background="@color/red"
+                    android:text="Tidak"
+                    android:layout_height="wrap_content"
+                    >
+                </Button>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
+
+
+    </RelativeLayout>
+
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
@@ -25,35 +104,25 @@
         tools:listitem="@layout/item_nos" />
 
     <RelativeLayout
-
         android:layout_alignParentBottom="true"
-
         android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp40"
         android:background="@color/reds"
         android:layout_marginRight="@dimen/dp40"
+
         android:layout_marginLeft="@dimen/dp40"
-
-
-
-
         >
 
         <TextView
-
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SUBMIT"
-
-android:textStyle="bold"
-
+            android:textStyle="bold"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:textColor="@color/white"
             >
-
         </TextView>
 
     </RelativeLayout>
