--- a/app/src/main/res/layout/activity_list_nos_audit.xml
+++ b/app/src/main/res/layout/activity_list_nos_audit.xml
@@ -100,7 +100,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/submit"
         android:layout_below="@+id/topbar"
-        tools:listitem="@layout/item_nos2" />
+        tools:listitem="@layout/item_nos" />
 
     <RelativeLayout
         android:layout_alignParentBottom="true"
