--- a/app/src/main/res/layout/activity_partisipant_detail.xml
+++ b/app/src/main/res/layout/activity_partisipant_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".view.activity.teamreport.FrequentActivity">
+   >
 
     <include layout="@layout/action_bar" android:id="@+id/bar"/>
 
@@ -88,11 +88,13 @@
         android:layout_width="match_parent">
         <TextView
             android:layout_margin="@dimen/dp8"
-            android:textSize="@dimen/dp14"
+            android:layout_marginTop="@dimen/dp3"
+            android:layout_marginLeft="@dimen/dp8"
+            android:textSize="@dimen/dp20"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="left"
-            android:text="Salesman + Sales Counter + SWAT"
+            android:text="SWAT"
             android:textColor="@color/white"
             tools:ignore="Suspicious0dp" />
 
